--- a/modules/home/aerospace.toml
+++ b/modules/home/aerospace.toml
@@ -178,10 +178,10 @@ alt-shift-9 = 'move-node-to-workspace 9'
 # alt-shift-a = 'move-node-to-workspace A'
 alt-shift-b = 'move-node-to-workspace B' # Browser
 alt-shift-c = 'move-node-to-workspace C' # Chat
-# alt-shift-d = 'move-node-to-workspace D'
+alt-shift-d = 'move-node-to-workspace D'
 # alt-shift-e = 'move-node-to-workspace E'
 # alt-shift-f = 'move-node-to-workspace F'
-# alt-shift-g = 'move-node-to-workspace G'
+alt-shift-g = 'move-node-to-workspace G'
 # alt-shift-i = 'move-node-to-workspace I'
 # alt-shift-m = 'move-node-to-workspace M'
 # alt-shift-n = 'move-node-to-workspace N'
