--- a/modules/home/aerospace.toml
+++ b/modules/home/aerospace.toml
@@ -11,11 +11,6 @@ start-at-login = true
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 
-# See: https://nikitabobko.github.io/AeroSpace/guide#layouts
-# The 'accordion-padding' specifies the size of accordion padding
-# You can set 0 to disable the padding feature
-accordion-padding = 30
-
 # Possible values: tiles|accordion
 default-root-container-layout = 'tiles'
 
@@ -25,10 +20,6 @@ default-root-container-layout = 'tiles'
 default-root-container-orientation = 'auto'
 
 # Mouse follows focus when focused monitor changes
-# Drop it from your config, if you don't like this behavior
-# See https://nikitabobko.github.io/AeroSpace/guide#on-focus-changed-callbacks
-# See https://nikitabobko.github.io/AeroSpace/commands#move-mouse
-# Fallback value (if you omit the key): on-focused-monitor-changed = []
 on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 
 # You can effectively turn off macOS "Hide application" (cmd-h) feature by toggling this flag
@@ -36,8 +27,6 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 # Also see: https://nikitabobko.github.io/AeroSpace/goodies#disable-hide-app
 automatically-unhide-macos-hidden-apps = true
 
-# Possible values: (qwerty|dvorak|colemak)
-# See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 [key-mapping]
 preset = 'qwerty'
 
@@ -56,6 +45,7 @@ outer.left = 0
 outer.bottom = 0
 outer.top = 0
 outer.right = 0
+
 
 # Window detection rules for automatic workspace assignment
 [[on-window-detected]]
@@ -78,44 +68,26 @@ run = ['move-node-to-workspace B']
 if = { app-name-regex-substring = 'ghostty' }
 run = ['move-node-to-workspace S']
 
-# 'main' binding mode declaration
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
-# 'main' binding mode must be always presented
-# Fallback value (if you omit the key): mode.main.binding = {}
+
+
 [mode.main.binding]
+alt-p = "mode project"   # Project selector
+alt-shift-semicolon = 'mode service' # Service mode
+esc   = "mode main"      # Exit project selector
 
-# All possible keys:
-# - Letters.        a, b, c, ..., z
-# - Numbers.        0, 1, 2, ..., 9
-# - Keypad numbers. keypad0, keypad1, keypad2, ..., keypad9
-# - F-keys.         f1, f2, ..., f20
-# - Special keys.   minus, equal, period, comma, slash, backslash, quote, semicolon,
-#                   backtick, leftSquareBracket, rightSquareBracket, space, enter, esc,
-#                   backspace, tab, pageUp, pageDown, home, end, forwardDelete,
-#                   sectionSign (ISO keyboards only, european keyboards only)
-# - Keypad special. keypadClear, keypadDecimalMark, keypadDivide, keypadEnter, keypadEqual,
-#                   keypadMinus, keypadMultiply, keypadPlus
-# - Arrows.         left, down, up, right
+# Open Terminal https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
+alt-enter = '''exec-and-forget osascript -e '
+tell application "Ghostty"
+    do script
+    activate
+end tell'
+'''
 
-# All possible modifiers: cmd, alt, ctrl, shift
+# Checkout later See: https://nikitabobko.github.io/AeroSpace/commands#layout
+# alt-h = 'layout tiles horizontal vertical'
+# alt-v = 'layout accordion horizontal vertical'
 
-# All possible commands: https://nikitabobko.github.io/AeroSpace/commands
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-# You can uncomment the following lines to open up terminal with alt + enter shortcut
-# (like in i3)
-# alt-enter = '''exec-and-forget osascript -e '
-# tell application "Terminal"
-#     do script
-#     activate
-# end tell'
-# '''
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#layout
-alt-slash = 'layout tiles horizontal vertical'
-alt-comma = 'layout accordion horizontal vertical'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#focus
+# VIM Focus Movement
 alt-h = 'focus left'
 alt-j = 'focus down'
 alt-k = 'focus up'
@@ -131,83 +103,35 @@ alt-shift-l = 'move right'
 alt-minus = 'resize smart -50'
 alt-equal = 'resize smart +50'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace
+# Workspace Switcher
+alt-tab = 'workspace-back-and-forth' # Switch between workspaces
 alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
 alt-3 = 'workspace 3'
 alt-4 = 'workspace 4'
 alt-5 = 'workspace 5'
-alt-6 = 'workspace 6'
-# alt-7 = 'workspace 7'
-# alt-8 = 'workspace 8'
-# alt-9 = 'workspace 9'
-# alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-alt-b = 'workspace B'
-alt-c = 'workspace C'
-alt-d = 'workspace D'
-# alt-e = 'workspace E'
-# alt-f = 'workspace F'
-alt-g = 'workspace G'
-# alt-i = 'workspace I'
-# alt-m = 'workspace M'
-# alt-n = 'workspace N'
-# alt-o = 'workspace O'
-# alt-p = 'workspace P'
-# alt-q = 'workspace Q'
-# alt-r = 'workspace R'
-alt-s = 'workspace S'
-# alt-t = 'workspace T'
-# alt-u = 'workspace U'
-# alt-v = 'workspace V'
-# alt-w = 'workspace W'
-# alt-x = 'workspace X'
-# alt-y = 'workspace Y'
-# alt-z = 'workspace Z'
+alt-b = 'workspace B' # Browser
+alt-c = 'workspace C' # Chat
+alt-d = 'workspace D' # Discord
+alt-s = 'workspace S' #Shell
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
+
+# Move to Workspace
 alt-shift-1 = 'move-node-to-workspace 1'
 alt-shift-2 = 'move-node-to-workspace 2'
 alt-shift-3 = 'move-node-to-workspace 3'
 alt-shift-4 = 'move-node-to-workspace 4'
 alt-shift-5 = 'move-node-to-workspace 5'
-alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
-alt-shift-9 = 'move-node-to-workspace 9'
-
-# alt-shift-a = 'move-node-to-workspace A'
 alt-shift-b = 'move-node-to-workspace B' # Browser
 alt-shift-c = 'move-node-to-workspace C' # Chat
-alt-shift-d = 'move-node-to-workspace D'
-# alt-shift-e = 'move-node-to-workspace E'
-# alt-shift-f = 'move-node-to-workspace F'
-alt-shift-g = 'move-node-to-workspace G'
-# alt-shift-i = 'move-node-to-workspace I'
-# alt-shift-m = 'move-node-to-workspace M'
-# alt-shift-n = 'move-node-to-workspace N'
-# alt-shift-o = 'move-node-to-workspace O'
-# alt-shift-p = 'move-node-to-workspace P'
-# alt-shift-q = 'move-node-to-workspace Q'
-# alt-shift-r = 'move-node-to-workspace R'
+alt-shift-d = 'move-node-to-workspace D' # Discord
 alt-shift-s = 'move-node-to-workspace S' # Shell
-# alt-shift-t = 'move-node-to-workspace T'
-# alt-shift-u = 'move-node-to-workspace U'
-# alt-shift-v = 'move-node-to-workspace V'
-# alt-shift-w = 'move-node-to-workspace W'
-# alt-shift-x = 'move-node-to-workspace X'
-# alt-shift-y = 'move-node-to-workspace Y'
-# alt-shift-z = 'move-node-to-workspace Z'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
-alt-tab = 'workspace-back-and-forth'
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
+
+# Move Workspace to Monitor
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#mode
-alt-shift-semicolon = 'mode service'
-
-# 'service' binding mode declaration.
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
+# --- SERVICE MODE ---
 [mode.service.binding]
 esc = ['reload-config', 'mode main']
 r = ['flatten-workspace-tree', 'mode main'] # reset layout
@@ -229,3 +153,43 @@ alt-shift-l = ['join-with right', 'mode main']
 down = 'volume down'
 up = 'volume up'
 shift-down = ['volume set 0', 'mode main']
+
+
+# --- PROJECT A ---
+[mode.projA.binding]
+1 = "workspace projA-1"
+2 = "workspace projA-2"
+3 = "workspace projA-3"
+shift-1 = ["move-node-to-workspace projA-1", "workspace projA-1"]
+shift-2 = ["move-node-to-workspace projA-2", "workspace projA-2"]
+shift-3 = ["move-node-to-workspace projA-3", "workspace projA-3"]
+ctrl-esc = "mode main"
+
+# --- PROJECT B ---
+[mode.projB.binding]
+1 = "workspace projB-1"
+2 = "workspace projB-2"
+3 = "workspace projB-3"
+shift-1 = ["move-node-to-workspace projB-1", "workspace projB-1"]
+shift-2 = ["move-node-to-workspace projB-2", "workspace projB-2"]
+shift-3 = ["move-node-to-workspace projB-3", "workspace projB-3"]
+esc = "mode main"
+
+
+# --- PROJECT C ---
+[mode.projC.binding]
+1 = "workspace projC-1"
+2 = "workspace projC-2"
+3 = "workspace projC-3"
+shift-1 = ["move-node-to-workspace projC-1", "workspace projC-1"]
+shift-2 = ["move-node-to-workspace projC-2", "workspace projC-2"]
+shift-3 = ["move-node-to-workspace projC-3", "workspace projC-3"]
+esc = "mode main"
+
+# --- PROJECT SELECTOR ---
+[mode.project.binding]
+d = ["mode default", "workspace default-s"]  # enter default context
+a = ["mode projA",   "workspace projA-s"]    # enter projA context
+b = ["mode projB",   "workspace projB-s"]    # enter projB context
+c = ["mode projC",   "workspace projC-s"]    # enter projC context
+esc = "mode main"
